--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt --hostname 133.130.125.163 --port 3000",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
+    "start": "nuxt start"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/vuetify": "^1.11.2",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.3.2",
     "eslint-config-vue": "^2.0.2",
     "moment": "^2.24.0",
+    "nuxt": "^2.14.7",
     "vue": "^2.6.10",
     "vue-head": "^2.1.2",
     "vue-router": "^3.1.5",
