--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@nuxtjs/vuetify": "^1.11.2",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
-    "core-js": "^3.3.2",
+    "core-js": "^3.8.0",
+    "deepmerge": "^4.2.2",
     "eslint-config-vue": "^2.0.2",
+    "fibers": "^5.0.0",
     "moment": "^2.24.0",
-    "nuxt": "^2.14.7",
+    "nuxt": "^2.14.9",
     "vue": "^2.6.10",
     "vue-head": "^2.1.2",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.1.0",
+    "vuetify": "^2.3.19",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
@@ -30,9 +32,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.2",
+    "sass": "^1.30.0",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.8",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   },
