--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xxx",
+  "name": "cjm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,58 +9,14 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/vuetify": "^1.11.2",
-    "axios": "^0.19.2",
-    "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.0",
-    "deepmerge": "^4.2.2",
-    "eslint-config-vue": "^2.0.2",
-    "fibers": "^5.0.0",
-    "hooper": "^0.3.4",
     "moment": "^2.24.0",
-    "nuxt": "^2.14.9",
-    "vue": "^2.6.10",
-    "vue-head": "^2.1.2",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.3.19",
-    "whatwg-fetch": "^3.0.0"
+    "nuxt": "^2.14.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "sass": "^1.30.0",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.8",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "@nuxt/image": "^0.4.14",
+    "@nuxtjs/sitemap": "^2.4.0"
+  }
 }
